# AWS-Badge-Access-Simulator-Deasia

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.json
src/: analysis.rs  lib.rs  main.rs
src/events/: access_event.rs  generator.rs  metadata.rs  mod.rs
src/facility/: building.rs  generator.rs  location.rs  mod.rs  registry.rs  room.rs
src/permissions/: access_flow.rs  mod.rs  permission_set.rs
src/simulation/: batch_generator.rs  behavior_engine.rs  error.rs  logging.rs  mod.rs  orchestrator.rs  statistics.rs  time_manager.rs  time_variance.rs
src/types/: config.rs  enums.rs  identifiers.rs  mod.rs
src/user/: behavior.rs  generator.rs  mod.rs  profile.rs  state.rs  user.rs
tests/: access_flow_tests.rs  batch_event_generation_tests.rs  behavior_engine_tests.rs  cli_argument_parsing_tests.rs  curious_user_failure_generation_tests.rs  design_spec_validation.rs  event_ordering_tests.rs  lib.rs  night_shift_integration_tests.rs  orchestrator_statistics_integration_tests.rs  schedule_conflict_resolution_integration_tests.rs  statistics_consolidation_tests.rs  time_management_tests.rs  time_variance_tests.rs  user_generation_tests.rs  user_profiles_output_tests.rs
